--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:background="@color/cardview_dark_background"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/answer"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:background="#efefef"
+        android:background="#00f1"
         android:padding="10dp"
         android:textSize="48sp"
         android:gravity="end|bottom"
@@ -212,6 +213,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_weight="1"
+        android:background=""
         >
         <Button
             android:id="@+id/Equal"
